--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -4,8 +4,7 @@
         <meta charset="utf-8">
         <title>Calculadora</title>
         <link rel="stylesheet" href="css/estilo.css"/>
-        <link href="https://fonts.googleapis.com/css2?family=
-        Orbitron&display=swap" rel="stylesheet"/>
+        <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet"/>
     </head>
     <body>
         <div id="calculadora">
@@ -13,25 +12,25 @@
                 <input type="text" id="screen" disabled >
             </div>
             <div id="botoesCalculadora">
-                <button id="um">1</button>
-                <button id="dois">2</button>
-                <button id="tres">3</button>
-                <button id="multiplicar">*</button>
+                <button id="um" onclick='addToScreen("1")'>1</button>
+                <button id="dois"onclick='addToScreen("2")'>2</button>
+                <button id="tres"onclick='addToScreen("3")'>3</button>
+                <button id="multiplicar"onclick='addToScreen("*")'>*</button>
                 <button id="limpar">C</button>
-                <button id="quatro">4</button>
-                <button id="cinco">5</button>
-                <button id="seis">6</button>
-                <button id="dividir">/</button>
+                <button id="quatro"onclick='addToScreen("4")'>4</button>
+                <button id="cinco"onclick='addToScreen("5")'>5</button>
+                <button id="seis"onclick='addToScreen("6")'>6</button>
+                <button id="dividir"onclick='addToScreen("/")'>/</button>
                 <button id="deletar">&larr;</button>
-                <button id="sete">7</button>
-                <button id="oito">8</button>
-                <button id="nove">9</button>
-                <button id="somar">+</button>
-                <button id="resultado">=</button>
-                <button id="zero">0</button>
-                <button id="dot">.</button>
-                <button id="dbZero">00</button>
-                <button id="subtracao">-</button>
+                <button id="sete"onclick='addToScreen("7")'>7</button>
+                <button id="oito"onclick='addToScreen("8")'>8</button>
+                <button id="nove"onclick='addToScreen("9")'>9</button>
+                <button id="somar"onclick='addToScreen("+")'>+</button>
+                <button id="resultado"onclick='result()'>=</button>
+                <button id="zero"onclick='addToScreen("0")'>0</button>
+                <button id="dot"onclick='addToScreen(".")'>.</button>
+                <button id="dbZero"onclick='addToScreen("00")'>00</button>
+                <button id="subtracao"onclick='addToScreen("-")'>-</button>
                 
             </div>
         </div>
