--- a/parNumero.html
+++ b/parNumero.html
@@ -1,13 +1,14 @@
 <html>
 <head>
-<p> parNumero <p>
+<p> ATIVIDADE DE IDADES <p>
 <script>
 var numero;
 numero = prompt("Entre com um valor: ");
 
-for(int i= 0, i<=numero, i+=2 ){
+for(let i= 0; i<=numero; i+=2 ){
     alert(i);
 }
+
  </script> 
 </head>
 </html>
